v 1.2. Добавил пагинацию и внес изменение в Swagger.
